optimize for tablets

--- a/website/index.html
+++ b/website/index.html
@@ -232,7 +232,7 @@
               src="resources/images/logo.svg"
               width="40"
               height="40"
-              class="bulletpoint"
+              class="bulletpoint helps__bulletpoint-oneliner"
               alt=""
             />
           </div>
