optimized for laptops

--- a/website/index.html
+++ b/website/index.html
@@ -94,158 +94,170 @@
     </div>
 
     <div id="home" class="section section-home">
-      <h1>WayPicker</h1>
-      <div class="home__text">The world's only mapless navigation app</div>
-      <div>
-        <img
-          src="resources/images/hero-sm.jpg"
-          width="640"
-          height="482"
-          class="hero-image"
-          alt="Woman holding phone with WayPicker app"
-        />
-      </div>
-      <div class="home__text-small">
-        Faced by a crossroad and unsure where to go? Fire up Waypicker.
-      </div>
-      <div class="home__claim__wrapper">
-        <div>Let us show you</div>
-        <div class="a-way-wrapper">
-          <span>the</span
-          ><img
-            src="resources/images/a-way.svg"
-            width="30"
-            height="26"
-            class="a-way"
-            alt=""
+      <div class="section-home__wrapper">
+        <h1>WayPicker</h1>
+        <div class="home__text">The world's only mapless navigation app</div>
+        <div>
+          <img
+            src="resources/images/hero-sm.jpg"
+            width="640"
+            height="482"
+            class="hero-image"
+            alt="Woman holding phone with WayPicker app"
           />
         </div>
-        <div>way.</div>
-      </div>
+        <div class="home__text-small">
+          Faced by a crossroad and unsure where to go? Fire up Waypicker.
+        </div>
+        <div class="home__claim__wrapper">
+          <div>Let us show you</div>
+          <div class="a-way-wrapper">
+            <span>the</span
+            ><img
+              src="resources/images/a-way.svg"
+              width="30"
+              height="26"
+              class="a-way"
+              alt=""
+            />
+          </div>
+          <div>way.</div>
+        </div>
 
-      <div>
-        <img
-          src="resources/images/appstore.svg"
-          width="200"
-          height="70"
-          class=""
-          alt="Download on the App Store"
-        />
+        <div>
+          <img
+            src="resources/images/appstore.svg"
+            width="200"
+            height="70"
+            class=""
+            alt="Download on the App Store"
+          />
+        </div>
+        <div class="android-text">
+          Unfortunately, we're not on Android (yet).
+        </div>
       </div>
-      <div class="android-text">Unfortunately, we're not on Android (yet).</div>
     </div>
+
     <div id="how-it-works" class="section">
       <h2>How It Works</h2>
-      <div class="section-works__row">
-        <div>
-          <img
-            src="resources/images/how-it-works1-sm.png"
-            width="238"
-            height="238"
-            class="section-works__image"
-            alt="Woman holding phone"
-          />
+      <div class="section-works__wrapper">
+        <div class="section-works__row">
+          <div>
+            <img
+              src="resources/images/how-it-works1-sm.png"
+              width="238"
+              height="238"
+              class="section-works__image"
+              alt="Woman holding phone"
+            />
+          </div>
+          <div class="section-works__text">
+            Standing before a crossroad and no idea where to go? Fire up
+            WayPicker.
+          </div>
         </div>
-        <div class="section-works__text">
-          Standing before a crossroad and no idea where to go? Fire up
-          WayPicker.
+        <div class="section-works__row">
+          <div class="section-works__text">
+            Tap the image that looks like the crossroad in front of you.
+          </div>
+          <div>
+            <img
+              src="resources/images/how-it-works2-sm.png"
+              width="238"
+              height="238"
+              class="section-works__image"
+              alt="Woman holding phone"
+            />
+          </div>
         </div>
-      </div>
-      <div class="section-works__row">
-        <div class="section-works__text">
-          Tap the image that looks like the crossroad in front of you.
-        </div>
-        <div>
-          <img
-            src="resources/images/how-it-works2-sm.png"
-            width="238"
-            height="238"
-            class="section-works__image"
-            alt="Woman holding phone"
-          />
-        </div>
-      </div>
-      <div class="section-works__row">
-        <div>
-          <img
-            src="resources/images/how-it-works3-sm.png"
-            width="238"
-            height="238"
-            class="section-works__image"
-            alt="Woman holding phone"
-          />
-        </div>
-        <div class="section-works__text">
-          The app will tell you where to go.
+        <div class="section-works__row">
+          <div>
+            <img
+              src="resources/images/how-it-works3-sm.png"
+              width="238"
+              height="238"
+              class="section-works__image"
+              alt="Woman holding phone"
+            />
+          </div>
+          <div class="section-works__text">
+            The app will tell you where to go.
+          </div>
         </div>
       </div>
     </div>
+
     <div id="how-it-helps" class="section">
       <h2>How It Helps</h2>
-      <div>
-        <img
-          src="resources/images/mockup-phone-features.png"
-          width="444"
-          height="640"
-          class="mockup-image"
-          alt="Iphone with WayPicker app"
-        />
-      </div>
-      <div class="section-helps__text">
-        WayPicker takes away the burden of making a decision. It offers an
-        impartial answer to the question: Which way should I go?
-      </div>
-      <ul class="section-helps__list">
-        <li>
-          <div>
-            <img
-              src="resources/images/logo.svg"
-              width="40"
-              height="40"
-              class="bulletpoint"
-              alt=""
-            />
+      <div class="section-helps__wrapper">
+        <div>
+          <img
+            src="resources/images/mockup-phone-features.png"
+            width="444"
+            height="640"
+            class="mockup-image"
+            alt="Iphone with WayPicker app"
+          />
+        </div>
+        <div>
+          <div class="section-helps__text">
+            WayPicker takes away the burden of making a decision. It offers an
+            impartial answer to the question: Which way should I go?
           </div>
-          <div>
-            Maybe you’re visiting a new city and aren’t sure which of its nooks
-            and crannies are worth exploring.
+          <ul class="section-helps__list">
+            <li>
+              <div>
+                <img
+                  src="resources/images/logo.svg"
+                  width="40"
+                  height="40"
+                  class="bulletpoint"
+                  alt=""
+                />
+              </div>
+              <div>
+                Maybe you’re visiting a new city and aren’t sure which of its
+                nooks and crannies are worth exploring.
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="resources/images/logo.svg"
+                  width="40"
+                  height="40"
+                  class="bulletpoint"
+                  alt=""
+                />
+              </div>
+              <div>
+                Perhaps you want to play a small game with your friends: who’ll
+                find the pub first, using WayPicker?
+              </div>
+            </li>
+            <li>
+              <div>
+                <img
+                  src="resources/images/logo.svg"
+                  width="40"
+                  height="40"
+                  class="bulletpoint helps__bulletpoint-oneliner"
+                  alt=""
+                />
+              </div>
+              <div>Or you need a randomizer app for an urban puzzle hunt.</div>
+            </li>
+          </ul>
+          <div class="section-helps__text">
+            Finally there’s that one situation when you are actually lost.
+            There’s no reception, you forgot to download the map and night’s
+            approaching fast.
           </div>
-        </li>
-        <li>
-          <div>
-            <img
-              src="resources/images/logo.svg"
-              width="40"
-              height="40"
-              class="bulletpoint"
-              alt=""
-            />
+          <div class="section-helps__text">
+            Why not ask an app to pick a way back?
           </div>
-          <div>
-            Perhaps you want to play a small game with your friends: who’ll find
-            the pub first, using WayPicker?
-          </div>
-        </li>
-        <li>
-          <div>
-            <img
-              src="resources/images/logo.svg"
-              width="40"
-              height="40"
-              class="bulletpoint helps__bulletpoint-oneliner"
-              alt=""
-            />
-          </div>
-          <div>Or you need a randomizer app for an urban puzzle hunt.</div>
-        </li>
-      </ul>
-      <div class="section-helps__text">
-        Finally there’s that one situation when you are actually lost. There’s
-        no reception, you forgot to download the map and night’s approaching
-        fast.
-      </div>
-      <div class="section-helps__text">
-        Why not ask an app to pick a way back?
+        </div>
       </div>
     </div>
 
@@ -285,58 +297,83 @@
 
     <div id="features" class="section">
       <h2>Features</h2>
-
-      <ul class="section-helps__list">
-        <li>
-          <div>
-            <img
-              src="resources/images/logo.svg"
-              width="40"
-              height="40"
-              class="bulletpoint"
-              alt=""
-            />
-          </div>
-          <div>
-            Six crossroad options. They'll match most crossroads you’ll meet out
-            there.
-          </div>
-        </li>
-        <li>
-          <div>
-            <img
-              src="resources/images/logo.svg"
-              width="40"
-              height="40"
-              class="bulletpoint"
-              alt=""
-            />
-          </div>
-          <div>
-            A default option in case you’re faced by a super-specific crossroad.
-          </div>
-        </li>
-        <li>
-          <div>
-            <img
-              src="resources/images/logo.svg"
-              width="40"
-              height="40"
-              class="bulletpoint bulletpoint-oneliner"
-              alt=""
-            />
-          </div>
-          <div>Three skins & dark mode support.</div>
-        </li>
-      </ul>
-      <div>
-        <img
-          src="resources/images/screens/screens-sm.gif"
-          width="320"
-          height="636"
-          class="section-features__image"
-          alt="Iphone with WayPicker app"
-        />
+      <div class="section-features__wrapper">
+        <ul class="section-helps__list">
+          <li>
+            <div>
+              <img
+                src="resources/images/logo.svg"
+                width="40"
+                height="40"
+                class="bulletpoint"
+                alt=""
+              />
+            </div>
+            <div>
+              Six crossroad options. They'll match most crossroads you’ll meet
+              out there.
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="resources/images/logo.svg"
+                width="40"
+                height="40"
+                class="bulletpoint"
+                alt=""
+              />
+            </div>
+            <div>
+              A default option in case you’re faced by a super-specific
+              crossroad.
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="resources/images/logo.svg"
+                width="40"
+                height="40"
+                class="bulletpoint bulletpoint-oneliner"
+                alt=""
+              />
+            </div>
+            <div>Three skins & dark mode support.</div>
+          </li>
+        </ul>
+        <div>
+          <img
+            src="resources/images/screens/screens-sm.gif"
+            width="320"
+            height="636"
+            class="section-features__image"
+            alt="Iphone with WayPicker app"
+          />
+        </div>
+        <div class="section-features__images-lg">
+          <img
+            src="resources/images/screens/01-lg.png"
+            width="608"
+            height="1200"
+            class=""
+            alt="Iphone with WayPicker app"
+          />
+          <img
+            src="resources/images/screens/04-lg.png"
+            width="608"
+            height="1200"
+            class=""
+            alt="Iphone with WayPicker app"
+          />
+          <img
+            src="resources/images/screens/03-lg.png"
+            width="608"
+            height="1200"
+            class=""
+            alt="Iphone with WayPicker app"
+          />
+        </div>
       </div>
     </div>
 
@@ -373,60 +410,88 @@
         alt=""
       />
     </div>
-    <div id="faq" class="section">
+    <div id="faq" class="section section-faq">
       <h2>FAQ</h2>
-      <div class="section-faq__text section-faq__question">
-        But how does the app know where I’m going?
-      </div>
-      <div class="section-faq__text">
-        It doesn’t. You’ll probably reach your destination eventually. Or not,
-        but you’ll have explored your surroundings pretty closely by the time
-        you decide to switch to an actual navigation app.
-      </div>
-      <div class="section-faq__text">
-        WayPicker simply lets you move the responsibility for making a choice to
-        someone (something) else. Like flipping a coin. Or rolling a die.
-      </div>
-      <div class="section-faq__text section-faq__question">
-        Why would anyone develop this?!
-      </div>
-      <div class="section-faq__text">
-        We originally created WayPicker as a randomizing element in a outdoor
-        puzzle hunt. Now we're sending it out into the world for others to enjoy
-        as well!
-      </div>
-      <div class="section-faq__text section-faq__question">
-        The WayPicker application is meant for entertainment purposes only. Use
-        it at your own risk!
-      </div>
-    </div>
-    <div id="download" class="section">
-      <h2>Download</h2>
-      <div>
-        <img
-          src="resources/images/mockup-phone-download-sm.jpg"
-          width="1200"
-          height="801"
-          class="section-download__image"
-          alt="Iphone with WayPicker app"
-        />
-      </div>
-      <div class="section-download__text">
-        Download the world’s only mapless nav app today. Let us show you a way.
-      </div>
-      <div>
-        <img
-          src="resources/images/appstore.svg"
-          width="200"
-          height="70"
-          class=""
-          alt="Download on the App Store"
-        />
-      </div>
-      <div class="section-download__android-text">
-        Unfortunately, we're not on Android (yet).
+      <div class="section-faq__wrapper">
+        <div>
+          <div class="section-faq__text section-faq__question">
+            But how does the app know where I’m going?
+          </div>
+          <div class="section-faq__text">
+            It doesn’t. You’ll probably reach your destination eventually. Or
+            not, but you’ll have explored your surroundings pretty closely by
+            the time you decide to switch to an actual navigation app.
+          </div>
+          <div class="section-faq__text">
+            WayPicker simply lets you move the responsibility for making a
+            choice to someone (something) else. Like flipping a coin. Or rolling
+            a die.
+          </div>
+        </div>
+        <div>
+          <div class="section-faq__text section-faq__question">
+            Why would anyone develop this?!
+          </div>
+          <div class="section-faq__text">
+            We originally created WayPicker as a randomizing element in a
+            outdoor puzzle hunt. Now we're sending it out into the world for
+            others to enjoy as well!
+          </div>
+          <div class="section-faq__text section-faq__question">
+            The WayPicker application is meant for entertainment purposes only.
+            Use it at your own risk!
+          </div>
+        </div>
       </div>
     </div>
+
+    <div id="download" class="section section-download">
+      <div class="section-download__wrapper">
+        <h2>Download</h2>
+        <div>
+          <img
+            src="resources/images/mockup-phone-download-sm.jpg"
+            width="1200"
+            height="801"
+            class="section-download__image"
+            alt="Iphone with WayPicker app"
+          />
+        </div>
+        <div class="section-download__text">
+          Download the world’s only mapless nav app today.
+        </div>
+        <div class="section-download__text-second">
+          Let us show you the way.
+        </div>
+        <div class="section-download__claim__wrapper">
+          <div>Let us show you</div>
+          <div class="a-way-wrapper">
+            <span>the</span
+            ><img
+              src="resources/images/a-way.svg"
+              width="30"
+              height="26"
+              class="a-way"
+              alt=""
+            />
+          </div>
+          <div>way.</div>
+        </div>
+        <div>
+          <img
+            src="resources/images/appstore.svg"
+            width="200"
+            height="70"
+            class=""
+            alt="Download on the App Store"
+          />
+        </div>
+        <div class="section-download__android-text">
+          Unfortunately, we're not on Android (yet).
+        </div>
+      </div>
+    </div>
+
     <div id="footer" class="section section-footer">
       <div class="section-footer__title section-footer__image-overlay">
         Ⓒ 2023 WayPicker
