--- a/website/terms-of-use/index.html
+++ b/website/terms-of-use/index.html
@@ -130,33 +130,53 @@
       <div class="cookies__title">Last updated: 21/1/2023</div>
     </div>
 
-    <div id="download" class="section">
-      <h2>Download App</h2>
-      <div>
-        <img
-          src="../resources/images/mockup-phone-download-sm.jpg"
-          width="1200"
-          height="801"
-          class="section-download__image"
-          alt="Iphone with WayPicker app"
-        />
-      </div>
-      <div class="section-download__text">
-        Download the world’s only mapless nav app today. Let us show you a way.
-      </div>
-      <div>
-        <img
-          src="../resources/images/appstore.svg"
-          width="200"
-          height="70"
-          class=""
-          alt="Download on the App Store"
-        />
-      </div>
-      <div class="section-download__android-text">
-        Unfortunately, we're not on Android (yet).
+    <div id="download" class="section section-download">
+      <div class="section-download__wrapper">
+        <h2>Download</h2>
+        <div>
+          <img
+            src="../resources/images/mockup-phone-download-sm.jpg"
+            width="1200"
+            height="801"
+            class="section-download__image"
+            alt="Iphone with WayPicker app"
+          />
+        </div>
+        <div class="section-download__text">
+          Download the world’s only mapless nav app today.
+        </div>
+        <div class="section-download__text-second">
+          Let us show you the way.
+        </div>
+        <div class="section-download__claim__wrapper">
+          <div>Let us show you</div>
+          <div class="a-way-wrapper">
+            <span>the</span
+            ><img
+              src="../resources/images/a-way.svg"
+              width="30"
+              height="26"
+              class="a-way"
+              alt=""
+            />
+          </div>
+          <div>way.</div>
+        </div>
+        <div>
+          <img
+            src="../resources/images/appstore.svg"
+            width="200"
+            height="70"
+            class=""
+            alt="Download on the App Store"
+          />
+        </div>
+        <div class="section-download__android-text">
+          Unfortunately, we're not on Android (yet).
+        </div>
       </div>
     </div>
+
     <div id="footer" class="section section-footer">
       <div class="section-footer__title section-footer__image-overlay">
         Ⓒ 2023 WayPicker
