update terms of use

--- a/website/terms-of-use/index.html
+++ b/website/terms-of-use/index.html
@@ -89,10 +89,11 @@
       <h1 class="cookies__heading">Terms of Use</h1>
       <h2 class="cookies__title">Overview</h2>
       <div class="cookies__text">
-        WayPicker.com is owned and operated by Orbitus Services, s.r.o. The
-        company is listed in the Companies Registrar of the Czech Republic by
-        the Prague 1 Municipal District Authority since
-        13&nbspFebruary&nbsp2012, under the ID number 24218171.
+        The WayPicker iOS app and the WayPicker.com website are both owned and
+        operated by Orbitus Services, s.r.o. The company is listed in the
+        Companies Registrar of the Czech Republic by the Prague 1 Municipal
+        District Authority under the ID number 24218171 (since
+        13&nbspFebruary&nbsp2012).
       </div>
       <div class="cookies__text">
         The company's offices can be found at the following address:
@@ -105,11 +106,21 @@
         <a href="tel:+420739040967" class="link">+420 739 040 967</a>.
       </div>
 
+      <h2 class="cookies__title">Terms of Use</h2>
+      <div class="cookies__text">
+        The WayPicker app does not collect any data whatsoever.
+      </div>
+
+      <div class="cookies__text">
+        The WayPicker.com website uses Google Analytics to analyze its traffic.
+        For more information, please see our Cookie Policy.
+      </div>
+
       <h2 class="cookies__title">Personal Data Processing</h2>
       <div class="cookies__text">
-        The moment you contact us, you provide us with your personal data.
-        Typically, this would be your name and email. We will process this data
-        for 10 years.
+        If you contact us directly (i. e. by sending us an email), you provide
+        us with your personal data, typically your name and email address. We
+        will process this data for 10 years.
       </div>
       <div class="cookies__text">
         Processing data in this way is possible due to the GDPR. We are the sole
@@ -127,7 +138,7 @@
         The WayPicker application and all related content are meant for
         entertainment purposes only.
       </div>
-      <div class="cookies__title">Last updated: 21/1/2023</div>
+      <div class="cookies__title">Last updated: 23/1/2023</div>
     </div>
 
     <div id="download" class="section section-download">
