--- a/website/index.html
+++ b/website/index.html
@@ -540,5 +540,5 @@
 
   <script src="js/main.js"></script>
   <script src="js/modernizr.js"></script>
-  <!--<script src="js/purecookie.js"></script> -->
+  <script src="js/purecookie.js"></script>
 </html>
