--- a/website/terms-of-use/index.html
+++ b/website/terms-of-use/index.html
@@ -113,7 +113,8 @@
 
       <div class="cookies__text">
         The WayPicker.com website uses Google Analytics to analyze its traffic.
-        For more information, please see our Cookie Policy.
+        For more information, please see our
+        <a href="../cookies/">Cookie Policy</a>.
       </div>
 
       <h2 class="cookies__title">Personal Data Processing</h2>
@@ -236,5 +237,5 @@
 
   <script src="../js/main.js"></script>
   <script src="../js/modernizr.js"></script>
-  <!--<script src="../js/purecookie.js"></script> -->
+  <script src="../js/purecookie.js"></script>
 </html>
