--- a/website/cookies/index.html
+++ b/website/cookies/index.html
@@ -332,5 +332,5 @@
 
   <script src="../js/main.js"></script>
   <script src="../js/modernizr.js"></script>
-  <!--<script src="../js/purecookie.js"></script> -->
+  <script src="../js/purecookie.js"></script>
 </html>
